<resources>
    <string name="app_name">Rago2</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">login</string>
    <string name="remember_me">Remember_Me</string>
    <string name="logout">logout</string>
    <string name="textview">TextView</string>
    <string name="type_of_crop">Type of Crop</string>
    <string name="home">home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="SignUp" />
    <string name="rago">(RAGO)</string>
    <string name="resource_agriculture_garbage_organizar">Resource Agriculture Garbage Organizar</string>
    <string name="signup">SignUp</string>
    <string name="username">username</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_you_in">WELCOME TO YOU IN</string>
    <string name="want_to_book_for_pick_up">want to book for pick up</string>
    <string name="location">location</string>
    <string name="land_area_in_acres">Land area in acres</string>
    <string name="still_facing_some_problem_on_your_booking">Still facing some problem on your booking</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_booking_id">Enter booking ID</string>
    <string name="phone_number">phone Number</string>
    <string name="go">Go</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="email">Email</string>
    <string name="email_id">email_id</string>
    <string name="type_of_crops">type_of_crop</string>
    <string-array name="crops">

        <item>Kharif Crops</item>

        <item>Rabi Crops </item>
        <item>Zaid Crops    </item>
        <item>corn   </item>
        <item>rice </item>
        <item>wheat   </item>
        <item>potatoes </item>
        <item>beans   </item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">phone</string>


</resources>