<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/profile"
        android:id="@+id/menu_profile"
        app:showAsAction="always"
        android:icon="@drawable/ic_profile_24"
        >
    </item>
    <item android:title="@string/edit"
    android:id="@+id/menu_edit"
    android:icon="@drawable/ic_edit_2"/>

    <item android:title="@string/settings"
        android:id="@+id/settings"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_baseline_settings_24"/>
    <item android:title="@string/logout"
        android:id="@+id/logout"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/ic_sharp_low_priority_24">


    </item>
</menu>